corrected alignment on carousel links
* added background color to contact square on home page

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -323,6 +323,7 @@ header {
   width: 100%;
   text-align: center;
   padding: 0 60px;
+  line-height: 2.1em;
 }
 
 .learn-more-link, .github-link, .application-link {
@@ -380,6 +381,7 @@ header {
       width: 100%;
       padding: 15px 0 0 25px;
       background-image: url('/img/assets/texture-1.png');
+      background-color: #686868;
     }
 
     .contact-wrapper p {
@@ -394,6 +396,7 @@ header {
     float: right;
     background-image: url('/img/assets/green-dust-and-scratches.png');
     background-color: saturate(@accent-color, -10%);
+    text-align: center;
     img {
       width: 100%;
       height: 100%;
@@ -496,14 +499,11 @@ header {
 
   .link-container {
     padding: 0 15px;
+    line-height: 1.4em;
   }
 
   .learn-more-link, .github-link, .application-link {
     font-size: .8em;
-  }
-
-  .learn-more-link {
-    margin-top: 3px;
   }
 
   .application-link {
